Adicionando tags openGraph

--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scal1=1, shrink-to-fit=no">
   <meta name="author" content="Victor Shermon">
-  <meta name="theme-color" content=""
+  <meta name="theme-color" content="#B4C8FD"
   <meta name="description" content="Desenvolvedor Front-End é Back-End com Foco nas Pricipais Técnologias da web como HTML5, javascript, jquery, reactJs, bootstrap, php, mysql">
   <meta name="keywords" content="programador, desenvolvedor, freelancer, front-end, back-end">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta property="og:title" content="Victor Shermon - Programdor Freelancer Front-End é Back-End">
+  <meta property="og:description" content="Desenvolvedor Front-End é Back-End com Foco nas Pricipais Técnologias da web como HTML5, javascript, jquery, reactJs, bootstrap, php, mysql">
+  <meta property="og:locale" content="pt_br">
+  <meta property="og:type" content="website">
+  <meta property="og:url"  content="https://www.victorshermon.com">
+  <meta property="og:site_name" content="Victor Shermon">
+  <meta property="og:image" content="https://www.victorshermon.com/imagem.jpg">
+  <meta property="og:image:type" content="image/jpeg">
 </head>
+
+<body>
+
+  
+
+</body>
+
 </html>
