Adicionando Tag Link

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
   <meta property="og:site_name" content="Victor Shermon">
   <meta property="og:image" content="https://www.victorshermon.com/imagem.jpg">
   <meta property="og:image:type" content="image/jpeg">
+  <link rel="stylesheet" type="text/css" href="assets/_css/body.css">
 </head>
 
 <body>
 
-  
+
 
 </body>
 
