Adicionando fonts normalize reset.css

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta property="og:image" content="https://www.victorshermon.com/imagem.jpg">
   <meta property="og:image:type" content="image/jpeg">
   <link rel="stylesheet" type="text/css" href="assets/_css/body.css">
+  <script type="module" defer src="assets/_js/script.js"></script>
 </head>
 
 <body>
