Ageitando tag viewport

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Victor Shermon - Programador Freelancer Front-End é Back-End</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scal1=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Victor Shermon">
   <meta name="theme-color" content="#B4C8FD"
   <meta name="description" content="Desenvolvedor Front-End é Back-End com Foco nas Pricipais Técnologias da web como HTML5, javascript, jquery, reactJs, bootstrap, php, mysql">
@@ -23,7 +23,7 @@
 
 <body>
 
- 
+
 
 </body>
 
