--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
   <script type="module" defer src="assets/_js/script.js"></script>
 </head>
 
-<body>
+<body class="grid-contructor">
 
+ <header class="header">
+  <a href="#">
 
+  </a>
+ </header>
 
 </body>
 
