--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
   <script type="module" defer src="assets/_js/script.js"></script>
 </head>
 
-<body class="grid-contructor">
+<body>
 
  <header class="header">
-  <a href="#">
 
-  </a>
  </header>
+
 
 </body>
 
